Added validation to new account creation page. Added css classes to Bootstrap-lumen.

--- a/WebContent/resources/css/bootstrap-lumen.css
+++ b/WebContent/resources/css/bootstrap-lumen.css
@@ -2275,6 +2275,10 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   color: #FF4136;
 }
 
+.invalid-feedback-w {
+  color: #FF4136;
+}
+
 .invalid-tooltip {
   position: absolute;
   top: 100%;
