--- a/WebContent/resources/css/bootstrap-lumen.css
+++ b/WebContent/resources/css/bootstrap-lumen.css
@@ -2276,7 +2276,11 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .invalid-feedback-w {
-  color: #FF4136;
+  color: red;
+}
+
+.valid-feedback-w {
+  color: green;
 }
 
 .invalid-tooltip {
