--- a/WebContent/WEB-INF/layouts/default.xml
+++ b/WebContent/WEB-INF/layouts/default.xml
@@ -22,6 +22,11 @@
 		<put-attribute name="content" value="/WEB-INF/tiles/login-page.jsp"></put-attribute>
 	</definition>
 
+	<definition name="login" extends="offers.base">
+		<put-attribute name="title" value="Offers Homepage"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/login.jsp"></put-attribute>
+	</definition>
+
 	<definition name="offers" extends="offers.base">
 		<put-attribute name="title" value="Offers Homepage"></put-attribute>
 		<put-attribute name="content" value="/WEB-INF/tiles/offers.jsp"></put-attribute>
@@ -37,6 +42,12 @@
 		<put-attribute name="content" value="/WEB-INF/tiles/offercreated.jsp"></put-attribute>
 	</definition>
 
+	<definition name="offerdeleted" extends="offers.base">
+		<put-attribute name="title" value="Offers Deleted"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/offerdeleted.jsp"></put-attribute>
+	</definition>
+
+
 	<definition name="newaccount" extends="offers.base">
 		<put-attribute name="includes"
 			value="/WEB-INF/tiles/newaccountscript.jsp"></put-attribute>
@@ -47,6 +58,11 @@
 	<definition name="accountcreated" extends="offers.base">
 		<put-attribute name="title" value="create account"></put-attribute>
 		<put-attribute name="content" value="/WEB-INF/tiles/accountcreated.jsp"></put-attribute>
+	</definition>
+
+	<definition name="logout" extends="offers.base">
+		<put-attribute name="title" value="create account"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/logout.jsp"></put-attribute>
 	</definition>
 
 	<definition name="loggedout" extends="offers.base">
